apply spotless